#206 Added new addition lore methods & fixed existing issue with ItemBuilder#addLine.